--- a/visual_computing/LAB1/exercisereport.tex
+++ b/visual_computing/LAB1/exercisereport.tex
@@ -37,13 +37,9 @@ def correct_with_flatfield(img, flatfield):
 When performing flat-field correction we want to compensate for imperfections of the detector by scaling the intensity value of a pixel by scaling with the intensity value of the same pixel in the flat-field image.
 If we did this by subtraction, i.e original\_pixel\_intensity - flat\_field\_intensity, we could end up with negative values.
 
-
-\section*{Task 4 - Point processing}
-
-\subsection*{1 - Intensity Transform}
-
 \input{../LAB1/point_processing}
 
+\clearpage
 \section*{Task 5 - Noise}
 
 \subsection*{1 - Salt \& Pepper noise}
