--- a/visual_computing/LAB1/exercisereport.tex
+++ b/visual_computing/LAB1/exercisereport.tex
@@ -107,3 +107,5 @@ def alias(img_mat, factor):
     \includegraphics[width=5cm]{../LAB1/output/lena_down_4x.png}
     \caption{Results of downsampling Lena. From top left to bottom right: original, factor = 2, factor = 3, factor = 4}
 \end{figure}
+
+\input{../LAB1/kahoot.tex}
