--- a/visual_computing/report/frontpage.tex
+++ b/visual_computing/report/frontpage.tex
@@ -10,8 +10,8 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Exercise book}\\[0.5cm]
-{\large \textit{Mathias Ose \& Øyvind Robertsen}}\\[0.2cm]
+{ \huge \bfseries Exercise book - Image processing}\\[0.5cm]
+{\large \textit{Mathias Ose}}\\[0.2cm]
 \HRule \\[1.5cm]
 
 
