--- a/visual_computing/report/frontpage.tex
+++ b/visual_computing/report/frontpage.tex
@@ -11,7 +11,7 @@
 % Title
 \HRule \\[0.4cm]
 { \huge \bfseries Exercise book - Image processing}\\[0.5cm]
-{\large \textit{Mathias Ose}}\\[0.2cm]
+{\large \textit{Øyvind Robertsen}}\\[0.2cm]
 \HRule \\[1.5cm]
 
 
